[project]
name = "loopretry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "George Shuklin", email = "george.shuklin@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-subtests>=0.15.0",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
